--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LabWork1-V5</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="сss/styles.css">
+
 </head>
 
 <body>
     <header class="container header">
         <div class="container header_container">
-            <div class="header__menu">
-                <img src="images/menu-96.png" alt="Menu icon">
-            </div>
-            <nav class="top_nav">
+            <nav id="nav-links" class="top_nav">
                 <ul>
                     <li class="header__nav-item">
                         <a class="header__nav-link-main" href="#"><b>Home</b></a>
@@ -27,13 +25,17 @@
                         <a class="header__nav-link" href="#">Apps</a>
                     </li>
                     <li class="header__nav-item">
-                        <a class="header__nav-link" href="#">Testimonials</a>
+                        <a class="header__nav-link" href="#">Testimanials</a>
                     </li>
                     <li class="header__nav-item">
                         <a class="header__nav-link" href="#">About us</a>
                     </li>
                 </ul>
             </nav>
+            <div class="burger">
+                <span></span>
+            </div>
+            
             <div class="logo logo_top">
                 <div class="circle_bg top_circle_bg">
                     <span class="letter">T</span>
@@ -50,53 +52,57 @@
                 </div>
                 <div class="underscore_1"></div>
                 <div class="description">
-                    <p>Our dedicated patient engagement app and web portal allow you to access information
+                    <p>Our dedicated patient engagement app and web portal allow you to acess informatiom
                         instantaneously (no tedeous form,
                         long calls, or administrative hassle) and securely
                     </p>
                 </div>
-                <button id="download">Download<img src="images/arrow_donw.png" class="arrow" id="arrow_down_1"></button>
+                <div class="download">
+                    <button id="download">Download<img src="images/arrow_donw.png" class="arrow" id="arrow_down_1"></button>
+                </div>
             </div>
-            <div class="image">
-                <img src="images/vec-1.svg" id="first_image">
-            </div>
-            <div class="element_vector_top">
-                <img src="images/element.svg" alt="element1">
+            <div class="images_hero">
+                <div class="image">
+                    <img src="images/vec-1.svg" id="first_image">
+                </div>
+                <div class="element_vector_top">
+                    <img src="images/element.svg" alt="element1">
+                </div>
             </div>
         </div>
     </header>
 
-    <section class="container articles">
+    <section class="container arcticles">
         <div class="title_2_container">
             <div class="title_2">
-                <h1>Check out our latest article</h1>
+                <h1>Check out our latest arcticle</h1>
             </div>
         </div>
-        <div class="underscore_2"></div>
-        <article class="articles_container">
-            <article class="article">
-                <img class="article-img-top" src="images/image 1.jpg" alt="Article image A1">
-                <div class="article-body">
-                    <h3 class="article-title AT-1">Disease detection, check up in the laboratory</h3>
-                    <p class="article-text article-1">In the case, the role of the health laboratory is
+        <div class="underscore_2"> </div>
+        <article class="arcticles_container">
+            <article class="arcticle">
+                <img class="arcticle-img-top" src="images/image 1.jpg" alt="Arcticle image A1">
+                <div class="arcticle-body">
+                    <h3 class="arcticle-title AT-1">Disease detection, check up in the laboratory</h3>
+                    <p class="arcticle-text arcticle-1">In the case, the role of the health laboratory is
                         very important to do a disease detection...</p>
                     <a href="#" class="read">Read more <img src="images/arrow_right.png" class="arrow_right"></a>
                 </div>
             </article>
-            <article class="article">
-                <img class="article-img-top" src="images/image 2.png" alt="Article image A2">
-                <div class="article-body">
-                    <h3 class="article-title AT-2">Herbal medicines that are safe for consumption</h3>
-                    <p class="article-text article-2">Herbal medicine is very widely used at this time because
+            <article class="arcticle">
+                <img class="arcticle-img-top" src="images/image 2.png" alt="Arcticle image A2">
+                <div class="arcticle-body">
+                    <h3 class="arcticle-title AT-2">Herbal medicines that are safe for consumption</h3>
+                    <p class="arcticle-text arcticle-2">Herbal medicine is very widely used at this time because
                         of its very good for your health...</p>
                     <a href="#" class="read">Read more <img src="images/arrow_right.png" class="arrow_right"></a>
                 </div>
             </article>
-            <article class="article">
-                <img class="article-img-top" src="images/image 3.png" alt="Article image A3">
-                <div class="article-body">
-                    <h3 class="article-title AT-3">Natural care for healthy facial skin</h3>
-                    <p class="article-text article-3">A healthy lifestyle should start from now and also for
+            <article class="arcticle">
+                <img class="arcticle-img-top" src="images/image 3.png" alt="Arcticle image A3">
+                <div class="arcticle-body">
+                    <h3 class="arcticle-title AT-3">Natural care for healthy facial skin</h3>
+                    <p class="arcticle-text arcticle-3">A healthy lifestyle should start from now and also for
                         your skin health. There are some...</p>
                     <a href="#" class="read">Read more <img src="images/arrow_right.png" class="arrow_right"></a>
                 </div>
@@ -110,14 +116,16 @@
             <div class="title_3">
                 <h1>What our customer are saing</h1>
             </div>
-            <div class="underscore_3"></div>
+            <div class="underscore_3"> </div>
             <div class="rew_container">
-                <div class="photo_of_person">
-                    <img src="images/image 4.jpg" id="second_image">
-                </div>
                 <div class="container_about_person">
-                    <div class="name"><b>Edvart Newgate</b></div>
-                    <div class="description2">Founder Circle</div>
+                    <div class="photo_of_person">
+                        <img src="images/image 4.jpg" id="second_image">
+                    </div>
+                    <div class="name_container">
+                        <div class="name"><b>Edvart Newgate</b></div>
+                        <div class="description2">Founder Circle</div>
+                    </div>
                 </div>
                 <p class="rew_text">"Our dedicated patient engagement app and web portal allow you to access information
                     instantaneously (no tedous form, long
@@ -139,11 +147,7 @@
             </a>
         </nav>
     </section>
-
     <footer class="container footer">
-        <div class="element_vector_bottom">
-            <img src="images/element2.png" alt="element2">
-        </div>
         <div class="logo logo_bottom">
             <div class="circle_bg bottom_circle_bg">
                 <span class="letter"><b>T</b></span>
@@ -154,18 +158,22 @@
         </div>
         <nav class="footer_nav">
             <ul>
-                <li class="nav__footer-item1">
-                    <a class="footer__nav-link" href=""> Company</a>
+                <li class="nav__footer-item">
+                    <a>Company</a>
                 </li>
-                <li class="nav__footer-item2">
-                    <a class="footer__nav-link" href="">Region</a>
+                <li class="nav__footer-item">
+                    <a>Region</a>
                 </li>
-                <li class="nav__footer-item3">
-                    <a class="footer__nav-link" href=""> Help</a>
+                <li class="nav__footer-item">
+                    <a>Help</a>
                 </li>
             </ul>
         </nav>
     </footer>
+    <script> document.querySelector('.burger').addEventListener('click', function() {
+        this.classList.toggle('active');
+        document.getElementById('nav-links').classList.toggle('open');})
+    </script>
 </body>
 
 </html>
